[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-intel-slack-bot"
version = "0.1.0"
description = "A bot that fetches, summarizes, and shares cybersecurity news in Slack"
authors = [
    { name = "Charles Chibueze", email = "charlesukpaka@ymail.com" }
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "slack-sdk",
    "langchain",
    "langchain-openai",
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
threat_intel_bot = "src.threat_intel_bot:main"
